testsuite/tests/indexed-types/should_fail/T1897b.stderr
T1897b.hs:16:1: error: [GHC-83865]
    • Couldn't match type: Depend b0
                     with: Depend b
      Expected: t (Depend b) -> Bool
        Actual: t (Depend b0) -> Bool
      Note: ‘Depend’ is a non-injective type family.
      The type variable ‘b0’ is ambiguous
    • In the ambiguity check for the inferred type for ‘isValid’
      To defer the ambiguity check to use sites, enable AllowAmbiguousTypes
      When checking the inferred type
        isValid :: forall {t :: * -> *} {b}.
                   (Foldable t, Bug b) =>
                   t (Depend b) -> Bool

